--- a/assets/css/trivia.css
+++ b/assets/css/trivia.css
@@ -21,6 +21,7 @@
     left: 5pc;
    font-size: 3pc;
    color: white;
+   height: 0px;
 }
 
 #questions {
